# Portfolio-management

./: .gitignore  BULLETPROOF_SETUP.md  BUSINESS_LOGIC_REPORT.md  PRICE_FETCHING_STATUS.md  PRICE_TEST_RESULTS.md  PRODUCTION_READY.md  PYTHON_ENV_SETUP.md  PYTHON_VERSION_FIX.md  Procfile  QUICK_REFERENCE.md  README.md  README_SETUP.md  SCHEMA_DOCUMENTATION.md  SETUP_COMPLETE.md  SOLUTION_SUMMARY.md  SUCCESS_REPORT.py  UPGRADE_GUIDE.md  VERIFICATION_COMPLETE.md  YAHOO_FINANCE_BLOCKED.md  _audit_deposits.py  _check_ccy.py  _check_ending_value.py  _check_humansoft.py  _check_snapshots.py  _check_usd.py  _gen_stock_lists.py  _mwrr_trace_output.txt  _trace_mwrr.py  _trace_mwrr2.py  _trace_mwrr3.py  _verify_mwrr.py  _verify_unified.py  add_bonus_demo.py  add_fx_demo.py  adjust_kfh.py  analyze_missing_deposits.py  app.json  app.py  archive_legacy.py  audit_13k_discrepancy.py  (+122 more)
mobile-migration/backend-api/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Procfile  _add_indexes.py  _bench_db.py  _bench_feed.py  _check_api_sim.py  _check_data.py  _check_holdings.py  _check_ownership.py  _check_snap.py  _chk2.py  _chk_pfm.py  _dump_schema.py  _fix_all_prices.py  _import_news.py  _migrate_news_to_prod.py  _page_lines.txt  _reset_admin_password.py  _reset_news.py  _restore_trading.py  _start_server.py  _test_admin_api.py  _test_allstocks.py  _test_crud.py  _test_deposit_flow.py  _test_endpoint.py  _test_endpoints.py  _test_imports.py  _test_news_feed.py  _test_output2.txt  _test_output3.txt  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml  render.yaml  (+2 more)
mobile-migration/backend-api/alembic/: env.py
mobile-migration/backend-api/app/: __init__.py  main.py
mobile-migration/backend-api/app/api/: auth.py  cron.py  deps.py  portfolio.py
mobile-migration/backend-api/app/core/: config.py  database.py  encryption.py  exceptions.py  json_response.py  limiter.py  logging_config.py  schema.py  (+2 more)
mobile-migration/backend-api/migrations/: add_is_admin.py  add_security_tables.py
mobile-migration/backend-api/scripts/: __init__.py  check_conflicts.py  migrate_data.py  normalize_codes.py
mobile-migration/backend-api/tests/: conftest.py  helpers.py
(+537 files in other folders)
